feat(items): Complete items database system with multi-realm support and technical documentation
## Implementation
### Multi-Realm Item Scraping
- **find_all_item_variants()**: Returns ALL realm variants of an item
  - Search with r=0 (ALL realms) to discover all variants
  - Apply 4 strict filters: exact name, level 50, utility 100, realm icon present
  - Extract ID and realm from each valid result
  - Returns list of variants: [{id, realm, name}, ...]

- **4 Strict Filters System**:
  1. Exact name match (case-insensitive) - eliminates false positives
  2. Level  50 - endgame items only
  3. Utility  100 - quality threshold
  4. Realm icon present - mandatory for realm identification

- **Realm Detection**: Extract from icon in search results
  - albion_logo.png  Albion
  - hibernia_logo.png  Hibernia
  - midgard_logo.png  Midgard
  - all_logo.png  All (common item, same ID for all realms)

### Database Enhancement
- **Merchant Currency**: Added merchant_currency field with automatic mapping
  - ZONE_CURRENCY mapping: DFSeals, SHGrimoires, ToAGlasses, DrakeScales, EpicSouls/Roots/Ices
  - Currency override based on price detection
  - Epic zones: Caer Sidi, Galladoria, Tuscaran Glacier

- **Database Preservation**: Fixed refresh_all_items() to preserve existing items
  - Changed from new_items = {} to new_items = dict(items)
  - Prevents data loss during selective refresh

- **Debug Mode**: Added item_filter parameter for selective refresh
  - UI selection dialog for testing specific items
  - Faster testing without full database refresh

### Database v2.0 Migration
- Composite keys: 'item_name:realm' (lowercase)
- Added fields: realm, model, dps, speed, damage_type, usable_by, merchant_currency
- Removed fields: level, quality, stats, resistances, bonuses
- Size reduction: 70 KB  14 KB (80% reduction)

## Documentation
### Consolidated Technical Documentation
Created ITEMS_DATABASE_TECHNICAL_DOCUMENTATION.md (2400+ lines):
- Complete database architecture (v2.0 s

--- a/Language/de.json
+++ b/Language/de.json
@@ -684,6 +684,8 @@
         "advanced_group_title": "⚙️ Erweiterte Operationen",
         "clean_duplicates_button": "🧹 Duplikate bereinigen",
         "clean_duplicates_tooltip": "Doppelte Gegenstände aus Quell-Datenbank entfernen",
+        "refresh_items_button": "🔄 Alle Gegenstände aktualisieren",
+        "refresh_items_tooltip": "Alle Gegenstände von Eden neu laden um Daten zu aktualisieren (Modell, DPS, Geschwindigkeit, usw.)",
         "clean_removed_count": "Entfernte Gegenstände",
         "no_files_selected_title": "Keine Dateien",
         "no_files_selected_message": "Bitte mindestens eine .txt-Datei auswählen",
@@ -695,6 +697,21 @@
         "clean_confirm_message": "Möchten Sie Duplikate aus der Quell-Datenbank entfernen?\n\nEin Backup wird automatisch erstellt.",
         "clean_success_title": "Bereinigung abgeschlossen",
         "clean_error_title": "Bereinigungsfehler",
+        "refresh_confirm_title": "Aktualisierung bestätigen",
+        "refresh_confirm_message": "Möchten Sie alle Gegenstände in der Quell-Datenbank aktualisieren?\n\nDies wird alle Gegenstände von Eden Herald neu laden um zu aktualisieren:\n• Modell-ID (für zukünftiges 3D-Rendering)\n• DPS, Geschwindigkeit, Schadenstyp (Waffen)\n• Typ, Slot (Ausrüstung)\n• Händlerpreis und -zone\n\n⚠️ Dieser Vorgang kann mehrere Minuten dauern.\nEin Backup wird automatisch erstellt.",
+        "refresh_success_title": "Aktualisierung erfolgreich",
+        "refresh_error_title": "Aktualisierungsfehler",
+        "refresh_error_message": "Fehler bei der Aktualisierung:\n{error}",
+        "refresh_cancelled_title": "Aktualisierung abgebrochen",
+        "refresh_cancelled_message": "Die Aktualisierung wurde abgebrochen.\n\nVor dem Abbruch verarbeitete Gegenstände wurden gespeichert.",
+        "refresh_progress_title": "Aktualisierung läuft",
+        "refresh_progress_description": "Aktualisierung der Gegenstände läuft...",
+        "refresh_progress_cancel": "Abbrechen",
+        "refresh_stats_total": "Gesamt-Gegenstände",
+        "refresh_stats_updated": "Aktualisiert",
+        "refresh_stats_skipped": "Unverändert",
+        "refresh_stats_failed": "Fehlgeschlagen",
+        "refresh_fields_updated": "Aktualisierte Felder",
         "progress_title": "Wird erstellt...",
         "progress_description": "Verarbeitung der Vorlagendateien"
     },
