--- a/Language/en.json
+++ b/Language/en.json
@@ -684,6 +684,8 @@
         "advanced_group_title": "⚙️ Advanced Operations",
         "clean_duplicates_button": "🧹 Clean Duplicates",
         "clean_duplicates_tooltip": "Remove duplicate items from source database",
+        "refresh_items_button": "🔄 Refresh All Items",
+        "refresh_items_tooltip": "Re-scrape all items from Eden to update data (Model, DPS, Speed, etc.)",
         "clean_removed_count": "Items removed",
         "no_files_selected_title": "No Files",
         "no_files_selected_message": "Please select at least one .txt file",
@@ -695,6 +697,21 @@
         "clean_confirm_message": "Do you want to remove duplicates from the source database?\n\nA backup will be created automatically.",
         "clean_success_title": "Cleanup Complete",
         "clean_error_title": "Cleanup Error",
+        "refresh_confirm_title": "Confirm Refresh",
+        "refresh_confirm_message": "Do you want to refresh all items in the source database?\n\nThis will re-scrape all items from Eden Herald to update:\n• Model ID (for future 3D rendering)\n• DPS, Speed, Damage Type (weapons)\n• Type, Slot (equipment)\n• Merchant price and zone\n\n⚠️ This operation may take several minutes.\nA backup will be created automatically.",
+        "refresh_success_title": "Refresh Successful",
+        "refresh_error_title": "Refresh Error",
+        "refresh_error_message": "Error during refresh:\n{error}",
+        "refresh_cancelled_title": "Refresh Cancelled",
+        "refresh_cancelled_message": "The refresh has been cancelled.\n\nItems processed before cancellation have been saved.",
+        "refresh_progress_title": "Refreshing",
+        "refresh_progress_description": "Refreshing items in progress...",
+        "refresh_progress_cancel": "Cancel",
+        "refresh_stats_total": "Total items",
+        "refresh_stats_updated": "Updated",
+        "refresh_stats_skipped": "Unchanged",
+        "refresh_stats_failed": "Failed",
+        "refresh_fields_updated": "Fields updated",
         "progress_title": "Building...",
         "progress_description": "Processing template files"
     },
