--- a/Language/fr.json
+++ b/Language/fr.json
@@ -684,6 +684,8 @@
         "advanced_group_title": "⚙️ Opérations Avancées",
         "clean_duplicates_button": "🧹 Nettoyer les doublons",
         "clean_duplicates_tooltip": "Supprimer les items en double dans la base source",
+        "refresh_items_button": "🔄 Rafraîchir tous les items",
+        "refresh_items_tooltip": "Re-scraper tous les items depuis Eden pour mettre à jour les données (Model, DPS, Speed, etc.)",
         "clean_removed_count": "Items supprimés",
         "no_files_selected_title": "Aucun fichier",
         "no_files_selected_message": "Veuillez sélectionner au moins un fichier .txt",
@@ -695,6 +697,21 @@
         "clean_confirm_message": "Voulez-vous supprimer les doublons de la base source ?\n\nUn backup sera créé automatiquement.",
         "clean_success_title": "Nettoyage terminé",
         "clean_error_title": "Erreur de nettoyage",
+        "refresh_confirm_title": "Confirmer le rafraîchissement",
+        "refresh_confirm_message": "Voulez-vous rafraîchir tous les items de la base source ?\n\nCeci va re-scraper tous les items depuis Eden Herald pour mettre à jour:\n• Model ID (pour rendu 3D futur)\n• DPS, Speed, Damage Type (armes)\n• Type, Slot (équipement)\n• Prix et zone marchand\n\n⚠️ Cette opération peut prendre plusieurs minutes.\nUne sauvegarde sera créée automatiquement.",
+        "refresh_success_title": "Rafraîchissement réussi",
+        "refresh_error_title": "Erreur de rafraîchissement",
+        "refresh_error_message": "Erreur lors du rafraîchissement:\n{error}",
+        "refresh_cancelled_title": "Rafraîchissement annulé",
+        "refresh_cancelled_message": "Le rafraîchissement a été annulé.\n\nLes items traités avant l'annulation ont été sauvegardés.",
+        "refresh_progress_title": "Rafraîchissement en cours",
+        "refresh_progress_description": "Rafraîchissement des items en cours...",
+        "refresh_progress_cancel": "Annuler",
+        "refresh_stats_total": "Total items",
+        "refresh_stats_updated": "Mis à jour",
+        "refresh_stats_skipped": "Inchangés",
+        "refresh_stats_failed": "Échecs",
+        "refresh_fields_updated": "Champs mis à jour",
         "progress_title": "Construction en cours...",
         "progress_description": "Traitement des fichiers template"
     },
