feat(armory): implement character-centric template system with realm organization
##  Major Features

### Import contextuel depuis fiche personnage
- Import templates from character sheet only (removed from Settings)
- Auto-detection: class, realm, season
- Standardized naming: {Class}_{Season}_{Description}.txt
- All lowercase normalization for descriptions

### Structure organisée par royaume
- Armory/{Realm}/Templates/ - Template files (.txt)
- Armory/{Realm}/Json/ - Metadata files (.json)
- Armory/.template_index.json - Global index (root)
- Supports: Albion, Hibernia, Midgard

### Métadonnées riches (JSON)
- Class (EN/FR/DE), realm, season, description
- Tags (max 5), source file, import date
- Imported by character, item count
- Auto-generated flag

### Filtrage intelligent
- Templates visible only for matching class
- Search by text (name + description)
- Filter by season
- Sort: date, name, item count

### UI Components
- TemplateImportDialog: Context-aware import with TagSelector
- TemplateListWidget: Search, filters, cards view
- TemplatePreviewDialog: Full metadata + item list preview
- TagSelector: Auto-completion, suggested tags (budget/content/level/ml/source/spec)

##  Backend

### New Components
- Functions/template_metadata.py: TemplateMetadata class, normalize_description(), validate_metadata()
- Functions/template_manager.py: TemplateManager with CRUD, filtering, indexing
- Functions/config_manager.py: +4 methods (get_current_season, get_available_seasons, add_season, set_current_season)

### UI Components
- UI/template_import_dialog.py: Import dialog with character context (293 lines)
- UI/widgets/tag_selector.py: Tag selection widget (215 lines)
- UI/widgets/template_list_widget.py: List with search/filters (313 lines)
- UI/dialog_templates/template_preview_dialog.py: Preview dialog (180 lines)

##  Translations

Added 3 sections in Language/{fr,en,de}.json:
- template_import: 17 keys (file selection, context, info, tags)
- template_list: 14 key

--- a/Language/de.json
+++ b/Language/de.json
@@ -580,6 +580,80 @@
         "armor_management": "Waffenkammer",
         "update_from_herald": "🔄 Vom Herald aktualisieren"
     },
+    "template_import": {
+        "window_title": "Vorlage importieren",
+        "file_group_title": "📂 Quelldatei",
+        "context_group_title": "🎯 Kontext (automatisch erkannt)",
+        "info_group_title": "📝 Informationen",
+        "no_file_selected": "Keine Datei ausgewählt",
+        "browse_button": "📁 Durchsuchen...",
+        "class_label": "Klasse:",
+        "realm_label": "Reich:",
+        "season_label": "Saison:",
+        "description_label": "Beschreibung:",
+        "description_placeholder": "Z.B.: günstig ohne ml10",
+        "tags_label": "Tags (optional):",
+        "preview_label": "Dateiname:",
+        "import_button": "📥 Importieren",
+        "cancel_button": "Abbrechen",
+        "select_file": "Vorlagendatei auswählen",
+        "file_filter": "Vorlagendateien (*.txt);;Alle Dateien (*.*)",
+        "import_success_title": "Import erfolgreich",
+        "import_success_message": "Vorlage '{name}' erfolgreich importiert",
+        "import_error_title": "Importfehler",
+        "import_error_message": "Vorlage kann nicht importiert werden:\n{error}",
+        "duplicate_error": "Eine Vorlage mit diesem Namen existiert bereits",
+        "tags_suggested": {
+            "budget": ["günstig", "budget", "premium", "high-end"],
+            "content": ["pve", "pvp", "rvr", "solo", "gruppe"],
+            "level": ["anfänger", "fortgeschritten", "experte"],
+            "ml": ["ml1", "ml5", "ml10", "ohne-ml"],
+            "source": ["eden", "offiziell", "community", "persönlich"],
+            "spec": ["heal", "dps", "tank", "support", "cc"]
+        }
+    },
+    "template_list": {
+        "title": "Verfügbare Vorlagen",
+        "no_templates": "Keine Vorlagen für diese Klasse gefunden",
+        "search_placeholder": "Suchen...",
+        "filter_season_label": "Saison:",
+        "filter_season_all": "Alle",
+        "filter_tags_label": "Tags:",
+        "sort_label": "Sortieren nach:",
+        "sort_date": "Datum (neueste)",
+        "sort_name": "Name (A-Z)",
+        "sort_items": "Anzahl Items",
+        "button_preview": "👁️ Vorschau",
+        "button_load": "📥 Laden",
+        "button_delete": "🗑️ Löschen",
+        "delete_confirm_title": "Löschen bestätigen",
+        "delete_confirm_message": "Möchten Sie die Vorlage '{name}' wirklich löschen?\nDiese Aktion kann nicht rückgängig gemacht werden.",
+        "delete_success": "Vorlage gelöscht",
+        "delete_error": "Fehler beim Löschen",
+        "load_success": "Vorlage geladen",
+        "load_error": "Fehler beim Laden",
+        "info_items": "{count} Items",
+        "info_imported": "Importiert am {date}"
+    },
+    "template_preview": {
+        "window_title": "Vorlagenvorschau - {name}",
+        "metadata_group": "📋 Informationen",
+        "items_group": "📦 Items ({count})",
+        "stats_group": "📊 Statistiken",
+        "label_class": "Klasse:",
+        "label_realm": "Reich:",
+        "label_season": "Saison:",
+        "label_description": "Beschreibung:",
+        "label_tags": "Tags:",
+        "label_source": "Quelldatei:",
+        "label_imported_by": "Importiert von:",
+        "label_import_date": "Importdatum:",
+        "label_notes": "Notizen:",
+        "stats_total_items": "Gesamt Items:",
+        "stats_slots_covered": "Belegte Slots:",
+        "button_load": "📥 Diese Vorlage laden",
+        "button_close": "Schließen"
+    },
     "armory_import": {
         "window_title": "Rüstkammer - Gegenstände Importieren",
         "file_group_title": "📂 Vorlagen-Datei",
@@ -735,6 +809,7 @@
             }
         },
         "buttons": {
+            "import_template": "📥 Vorlage importieren",
             "upload": "📤 Datei hochladen",
             "refresh": "🔄 Aktualisieren",
             "close": "Schließen",
