--- a/Language/en.json
+++ b/Language/en.json
@@ -580,6 +580,80 @@
         "armor_management": "Armoury",
         "update_from_herald": "🔄 Update from Herald"
     },
+    "template_import": {
+        "window_title": "Import Template",
+        "file_group_title": "📂 Source File",
+        "context_group_title": "🎯 Context (auto-detected)",
+        "info_group_title": "📝 Information",
+        "no_file_selected": "No file selected",
+        "browse_button": "📁 Browse...",
+        "class_label": "Class:",
+        "realm_label": "Realm:",
+        "season_label": "Season:",
+        "description_label": "Description:",
+        "description_placeholder": "Ex: low cost without ml10",
+        "tags_label": "Tags (optional):",
+        "preview_label": "File name:",
+        "import_button": "📥 Import",
+        "cancel_button": "Cancel",
+        "select_file": "Select template file",
+        "file_filter": "Template files (*.txt);;All files (*.*)",
+        "import_success_title": "Import Successful",
+        "import_success_message": "Template '{name}' imported successfully",
+        "import_error_title": "Import Error",
+        "import_error_message": "Cannot import template:\n{error}",
+        "duplicate_error": "A template with this name already exists",
+        "tags_suggested": {
+            "budget": ["low-cost", "budget", "premium", "high-end"],
+            "content": ["pve", "pvp", "rvr", "solo", "group"],
+            "level": ["beginner", "intermediate", "advanced"],
+            "ml": ["ml1", "ml5", "ml10", "no-ml"],
+            "source": ["eden", "official", "community", "personal"],
+            "spec": ["heal", "dps", "tank", "support", "cc"]
+        }
+    },
+    "template_list": {
+        "title": "Available Templates",
+        "no_templates": "No templates found for this class",
+        "search_placeholder": "Search...",
+        "filter_season_label": "Season:",
+        "filter_season_all": "All",
+        "filter_tags_label": "Tags:",
+        "sort_label": "Sort by:",
+        "sort_date": "Date (recent)",
+        "sort_name": "Name (A-Z)",
+        "sort_items": "Item count",
+        "button_preview": "👁️ Preview",
+        "button_load": "📥 Load",
+        "button_delete": "🗑️ Delete",
+        "delete_confirm_title": "Confirm Deletion",
+        "delete_confirm_message": "Are you sure you want to delete template '{name}'?\nThis action cannot be undone.",
+        "delete_success": "Template deleted",
+        "delete_error": "Error deleting template",
+        "load_success": "Template loaded",
+        "load_error": "Error loading template",
+        "info_items": "{count} items",
+        "info_imported": "Imported on {date}"
+    },
+    "template_preview": {
+        "window_title": "Template Preview - {name}",
+        "metadata_group": "📋 Information",
+        "items_group": "📦 Items ({count})",
+        "stats_group": "📊 Statistics",
+        "label_class": "Class:",
+        "label_realm": "Realm:",
+        "label_season": "Season:",
+        "label_description": "Description:",
+        "label_tags": "Tags:",
+        "label_source": "Source file:",
+        "label_imported_by": "Imported by:",
+        "label_import_date": "Import date:",
+        "label_notes": "Notes:",
+        "stats_total_items": "Total items:",
+        "stats_slots_covered": "Slots covered:",
+        "button_load": "📥 Load this template",
+        "button_close": "Close"
+    },
     "armory_import": {
         "window_title": "Armory - Items Import",
         "file_group_title": "📂 Template File",
@@ -735,6 +809,7 @@
             }
         },
         "buttons": {
+            "import_template": "📥 Import Template",
             "upload": "📤 Upload File",
             "refresh": "🔄 Refresh",
             "close": "Close",
