--- a/Language/fr.json
+++ b/Language/fr.json
@@ -580,6 +580,80 @@
         "armor_management": "Armurerie",
         "update_from_herald": "🔄 Mettre à jour depuis Herald"
     },
+    "template_import": {
+        "window_title": "Importer un template",
+        "file_group_title": "📂 Fichier source",
+        "context_group_title": "🎯 Contexte (auto-détecté)",
+        "info_group_title": "📝 Informations",
+        "no_file_selected": "Aucun fichier sélectionné",
+        "browse_button": "📁 Parcourir...",
+        "class_label": "Classe :",
+        "realm_label": "Royaume :",
+        "season_label": "Saison :",
+        "description_label": "Description :",
+        "description_placeholder": "Ex: low cost sans ml10",
+        "tags_label": "Tags (optionnel) :",
+        "preview_label": "Nom du fichier :",
+        "import_button": "📥 Importer",
+        "cancel_button": "Annuler",
+        "select_file": "Sélectionner un fichier template",
+        "file_filter": "Fichiers template (*.txt);;Tous les fichiers (*.*)",
+        "import_success_title": "Import réussi",
+        "import_success_message": "Template '{name}' importé avec succès",
+        "import_error_title": "Erreur d'import",
+        "import_error_message": "Impossible d'importer le template :\n{error}",
+        "duplicate_error": "Un template avec ce nom existe déjà",
+        "tags_suggested": {
+            "budget": ["low-cost", "budget", "premium", "high-end"],
+            "content": ["pve", "pvp", "rvr", "solo", "groupe"],
+            "level": ["débutant", "intermédiaire", "avancé"],
+            "ml": ["ml1", "ml5", "ml10", "sans-ml"],
+            "source": ["eden", "officiel", "communauté", "personnel"],
+            "spec": ["heal", "dps", "tank", "support", "cc"]
+        }
+    },
+    "template_list": {
+        "title": "Templates disponibles",
+        "no_templates": "Aucun template trouvé pour cette classe",
+        "search_placeholder": "Rechercher...",
+        "filter_season_label": "Saison :",
+        "filter_season_all": "Toutes",
+        "filter_tags_label": "Tags :",
+        "sort_label": "Trier par :",
+        "sort_date": "Date (récent)",
+        "sort_name": "Nom (A-Z)",
+        "sort_items": "Nombre d'items",
+        "button_preview": "👁️ Aperçu",
+        "button_load": "📥 Charger",
+        "button_delete": "🗑️ Supprimer",
+        "delete_confirm_title": "Confirmer la suppression",
+        "delete_confirm_message": "Êtes-vous sûr de vouloir supprimer le template '{name}' ?\nCette action est irréversible.",
+        "delete_success": "Template supprimé",
+        "delete_error": "Erreur lors de la suppression",
+        "load_success": "Template chargé",
+        "load_error": "Erreur lors du chargement",
+        "info_items": "{count} items",
+        "info_imported": "Importé le {date}"
+    },
+    "template_preview": {
+        "window_title": "Aperçu du template - {name}",
+        "metadata_group": "📋 Informations",
+        "items_group": "📦 Items ({count})",
+        "stats_group": "📊 Statistiques",
+        "label_class": "Classe :",
+        "label_realm": "Royaume :",
+        "label_season": "Saison :",
+        "label_description": "Description :",
+        "label_tags": "Tags :",
+        "label_source": "Fichier source :",
+        "label_imported_by": "Importé par :",
+        "label_import_date": "Date d'import :",
+        "label_notes": "Notes :",
+        "stats_total_items": "Total items :",
+        "stats_slots_covered": "Slots couverts :",
+        "button_load": "📥 Charger ce template",
+        "button_close": "Fermer"
+    },
     "armory_import": {
         "window_title": "Armurerie - Import d'items",
         "file_group_title": "📂 Fichier Template",
@@ -735,6 +809,7 @@
             }
         },
         "buttons": {
+            "import_template": "📥 Importer un template",
             "upload": "📤 Uploader un fichier",
             "refresh": "🔄 Actualiser",
             "close": "Fermer",
