feat(mass-import): add ignore items system with retry improvements
##  New Features

### Ignore Items System
- Add 'Ignore' button in failed items review dialog
- Items marked with ignore_item: true flag in database
- Ignored items automatically skipped in future imports
- Persistent ignore list across sessions

### Retry System Improvements
- Fix QEventLoop crash by removing blocking wait
- Correct database path to items_database_src.json
- Add grouped retry by realm for better organization
- Improve error handling with try/except protection

### UI Enhancements
- Red styled 'Ignore' button with confirmation dialog
- Update button states based on selection
- Better separation between Retry and Ignore actions
- Return code 2 for ignore action vs 1 for retry

##  Bug Fixes
- Fix crash when retry completes (QEventLoop blocking UI thread)
- Fix AttributeError: update_review_button -> set_filtered_items
- Fix checkbox selection not working correctly
- Protect against path_manager None crashes

##  Translations
- Add FR/EN/DE translations for ignore functionality
- Add confirmation messages for ignore action
- Update all dialog strings

##  Documentation
- Add future improvements for ignore system to FUTURE_IMPROVEMENTS.md
- Document interface management, unignore feature, export/import

##  Technical Changes
- Add ignore_item flag check in import_worker.py
- Implement mark_items_as_ignored() method
- Add get_ignored_items() method to dialog
- Update filtered_items list after ignore action

--- a/Language/de.json
+++ b/Language/de.json
@@ -384,6 +384,63 @@
                 "status_loading": "Lädt...",
                 "status_no_date": "-"
             },
+            "mass_import_monitor": {
+                "window_title": "📦 Massenimport-Monitor",
+                "title": "📦 Massenimport - Echtzeit-Überwachung",
+                "stats_group": "📊 Echtzeit-Statistiken",
+                "unique_items": "🔍 Eindeutige Gegenstände:",
+                "variants_found": "🌐 Varianten gefunden:",
+                "items_processed": "⚙️ Verarbeitete Gegenstände:",
+                "added": "✅ Hinzugefügt:",
+                "duplicates": "⏭️ Duplikate übersprungen:",
+                "failed": "❌ Fehlgeschlagen:",
+                "files_group": "📁 Vorlagendateien",
+                "progress_group": "📈 Fortschritt",
+                "waiting": "Warten...",
+                "processing": "🔍 Verarbeitung:",
+                "logs_group": "📋 Detaillierte Protokolle",
+                "clear_button": "🗑️ Löschen",
+                "export_button": "💾 Exportieren",
+                "autoscroll": "📜 Auto-Scroll: AN",
+                "errors_group": "⚠️ Fehlerverfolgung",
+                "clear_errors": "🗑️ Fehler löschen",
+                "export_errors": "💾 Fehler exportieren",
+                "error_count": "{count} Fehler",
+                "ready": "Bereit zum Starten des Imports...",
+                "review_filtered": "🔍 Gefilterte Gegenstände prüfen ({count})",
+                "close_button": "❌ Schließen",
+                "logs_cleared": "Protokolle gelöscht",
+                "no_errors": "Keine Fehler zum Exportieren",
+                "export_success": "Fehler exportiert nach:",
+                "export_error": "Fehler beim Exportieren:",
+                "export_log_success": "Protokolle exportiert nach:",
+                "export_log_error": "Protokolle konnten nicht exportiert werden:"
+            },
+            "failed_items": {
+                "title": "Gefilterte Gegenstände prüfen",
+                "header": "📋 {count} Gegenstand/Gegenstände wurde(n) während des Imports gefiltert",
+                "info": "Wählen Sie Gegenstände aus, um den Import OHNE Filter zu wiederholen (Level-/Utility-Einschränkungen werden ignoriert)",
+                "select_all": "☑ Alles auswählen",
+                "deselect_all": "☐ Alles abwählen",
+                "col_select": "Auswahl",
+                "col_name": "Gegenstandsname",
+                "col_realm": "Reich",
+                "col_reason": "Filtergrund",
+                "col_level": "Level",
+                "col_utility": "Utility",
+                "reason_level": "Level < 50",
+                "reason_utility": "Utility < 100",
+                "reason_no_merchant": "Kein Händler",
+                "reason_currency": "Währung: {currency}",
+                "stats": "📊 {selected} / {total} Gegenstände ausgewählt zum Wiederholen",
+                "retry_selected": "🔄 Ausgewählte Gegenstände wiederholen ({count})",
+                "ignore_selected": "🚫 Ausgewählte Gegenstände ignorieren ({count})",
+                "close": "Schließen",
+                "confirm_title": "Wiederholung bestätigen",
+                "confirm_message": "Import für {count} Gegenstand/Gegenstände OHNE Filter wiederholen?\n\n⚠️ Dies ignoriert Level- und Utility-Einschränkungen.",
+                "ignore_confirm_title": "Ignorieren bestätigen",
+                "ignore_confirm_message": "Dauerhaft {count} Gegenstand/Gegenstände ignorieren?\n\n⚠️ Diese Gegenstände werden nie wieder in zukünftigen Importen erscheinen.\nSie können ignorierte Gegenstände später verwalten."
+            },
             "superadmin": {
                 "title": "SuperAdmin - Administrator-Tools",
                 "subtitle": "Quell-Datenbank-Verwaltungstools",
