--- a/Language/en.json
+++ b/Language/en.json
@@ -376,6 +376,63 @@
                 "status_loading": "Loading...",
                 "status_no_date": "-"
             },
+            "mass_import_monitor": {
+                "window_title": "📦 Mass Import Monitor",
+                "title": "📦 Mass Import - Real-Time Monitoring",
+                "stats_group": "📊 Real-Time Statistics",
+                "unique_items": "🔍 Unique items:",
+                "variants_found": "🌐 Variants found:",
+                "items_processed": "⚙️ Items processed:",
+                "added": "✅ Added:",
+                "duplicates": "⏭️ Duplicates skipped:",
+                "failed": "❌ Failed:",
+                "files_group": "📁 Template Files",
+                "progress_group": "📈 Progress",
+                "waiting": "Waiting...",
+                "processing": "🔍 Processing:",
+                "logs_group": "📋 Detailed Logs",
+                "clear_button": "🗑️ Clear",
+                "export_button": "💾 Export",
+                "autoscroll": "📜 Auto-scroll: ON",
+                "errors_group": "⚠️ Error Tracking",
+                "clear_errors": "🗑️ Clear errors",
+                "export_errors": "💾 Export errors",
+                "error_count": "{count} error(s)",
+                "ready": "Ready to start import...",
+                "review_filtered": "🔍 Review Filtered Items ({count})",
+                "close_button": "❌ Close",
+                "logs_cleared": "Logs cleared",
+                "no_errors": "No errors to export",
+                "export_success": "Errors exported to:",
+                "export_error": "Unable to export errors:",
+                "export_log_success": "Logs exported to:",
+                "export_log_error": "Unable to export logs:"
+            },
+            "failed_items": {
+                "title": "Review Filtered Items",
+                "header": "📋 {count} item(s) were filtered during import",
+                "info": "Select items to retry import WITHOUT filters (Level/Utility restrictions will be ignored)",
+                "select_all": "☑ Select All",
+                "deselect_all": "☐ Deselect All",
+                "col_select": "Select",
+                "col_name": "Item Name",
+                "col_realm": "Realm",
+                "col_reason": "Filter Reason",
+                "col_level": "Level",
+                "col_utility": "Utility",
+                "reason_level": "Level < 50",
+                "reason_utility": "Utility < 100",
+                "reason_no_merchant": "No Merchant",
+                "reason_currency": "Currency: {currency}",
+                "stats": "📊 {selected} / {total} items selected for retry",
+                "retry_selected": "🔄 Retry Selected Items ({count})",
+                "ignore_selected": "🚫 Ignore Selected Items ({count})",
+                "close": "Close",
+                "confirm_title": "Confirm Retry",
+                "confirm_message": "Retry import for {count} item(s) WITHOUT filters?\n\n⚠️ This will ignore Level and Utility restrictions.",
+                "ignore_confirm_title": "Confirm Ignore",
+                "ignore_confirm_message": "Permanently ignore {count} item(s)?\n\n⚠️ These items will never appear in future imports.\nYou can manage ignored items later."
+            },
             "superadmin": {
                 "title": "SuperAdmin - Administrator Tools",
                 "subtitle": "Source database management tools",
