--- a/Language/fr.json
+++ b/Language/fr.json
@@ -384,6 +384,63 @@
                 "status_loading": "Chargement...",
                 "status_no_date": "-"
             },
+            "mass_import_monitor": {
+                "window_title": "📦 Import en Masse - Monitoring",
+                "title": "📦 Import en Masse - Monitoring en Temps Réel",
+                "stats_group": "📊 Statistiques en Temps Réel",
+                "unique_items": "🔍 Items uniques:",
+                "variants_found": "🌐 Variantes trouvées:",
+                "items_processed": "⚙️ Items traités:",
+                "added": "✅ Ajoutés:",
+                "duplicates": "⏭️ Doublons ignorés:",
+                "failed": "❌ Échecs:",
+                "files_group": "📁 Fichiers Template",
+                "progress_group": "📈 Progression",
+                "waiting": "En attente...",
+                "processing": "🔍 En cours:",
+                "logs_group": "📋 Logs Détaillés",
+                "clear_button": "🗑️ Effacer",
+                "export_button": "💾 Exporter",
+                "autoscroll": "📜 Auto-scroll: ON",
+                "errors_group": "⚠️ Suivi des Erreurs",
+                "clear_errors": "🗑️ Effacer erreurs",
+                "export_errors": "💾 Exporter erreurs",
+                "error_count": "{count} erreur(s)",
+                "ready": "Prêt à démarrer l'import...",
+                "review_filtered": "🔍 Examiner Items Filtrés ({count})",
+                "close_button": "❌ Fermer",
+                "logs_cleared": "Logs effacés",
+                "no_errors": "Aucune erreur à exporter",
+                "export_success": "Erreurs exportées vers:",
+                "export_error": "Impossible d'exporter les erreurs:",
+                "export_log_success": "Logs exportés vers:",
+                "export_log_error": "Impossible d'exporter les logs:"
+            },
+            "failed_items": {
+                "title": "Examiner les Items Filtrés",
+                "header": "📋 {count} item(s) ont été filtrés lors de l'import",
+                "info": "Sélectionnez les items à réessayer SANS filtres (les restrictions Level/Utility seront ignorées)",
+                "select_all": "☑ Tout sélectionner",
+                "deselect_all": "☐ Tout désélectionner",
+                "col_select": "Sélection",
+                "col_name": "Nom de l'Item",
+                "col_realm": "Royaume",
+                "col_reason": "Raison du Filtrage",
+                "col_level": "Niveau",
+                "col_utility": "Utilité",
+                "reason_level": "Niveau < 50",
+                "reason_utility": "Utilité < 100",
+                "reason_no_merchant": "Pas de Vendeur",
+                "reason_currency": "Devise: {currency}",
+                "stats": "📊 {selected} / {total} items sélectionnés pour réessai",
+                "retry_selected": "🔄 Réessayer Items Sélectionnés ({count})",
+                "ignore_selected": "🚫 Ignorer Items Sélectionnés ({count})",
+                "close": "Fermer",
+                "confirm_title": "Confirmer le Réessai",
+                "confirm_message": "Réessayer l'import pour {count} item(s) SANS filtres ?\n\n⚠️ Ceci ignorera les restrictions de Niveau et d'Utilité.",
+                "ignore_confirm_title": "Confirmer l'Ignorage",
+                "ignore_confirm_message": "Ignorer définitivement {count} item(s) ?\n\n⚠️ Ces items n'apparaîtront plus dans les futurs imports.\nVous pourrez gérer les items ignorés plus tard."
+            },
             "superadmin": {
                 "title": "SuperAdmin - Outils Administrateur",
                 "subtitle": "Outils de gestion de la base de données source",
